Cleaning up some lingering REBECCAxx highlight markers that escaped somehow. Also tweaking down paragraphs by 1mm and saving ~20 pages

--- a/4T/ch10.tex
+++ b/4T/ch10.tex
@@ -471,9 +471,9 @@ Hayley apologizes for failing the test.
 
 ``Why do you think you failed?  You shouldn't be so hard on yourself.  The first time you thought you failed.  This time you got much further and you still think you failed.  What would you have considered a success?  If you made it down the corridor?  Or something else?'' asks Dr. Gerhauser curiously.
 
-REBECCAxxBEGINxxHIGHLIGHTxx``I would succeed when I reach the end.  When I win,'' says Hayley, bewildered.
+\hl{``I would succeed when I reach the end.  When I win,'' says Hayley, bewildered.
 
-``There is no end to anything.  You should come to terms with that,'' says Dr. Gerhauser.xxENDxxHIGHLIGHT\footnote{\textbf{q.google }This by far my favorite conversation in the whole game. \textsubscript{12/07/12 10:36am}}\footnote{$\rightarrow$\textbf{Suko T }It really hit Hayley in one of her vulnerable spots. \textsubscript{12/07/12 12:11pm}}\footnote{$\rightarrow$\textbf{q.google }I'm actually surprised to learn Hayley is motivated by the notion of winning.  I thought she thought she failed because she didn't follow orders properly (whatever her orders were). \textsubscript{12/11/12 8:15pm}}\footnote{$\rightarrow$\textbf{Suko T }It's less ``winning for the sake of victory'' than for ``winning/finishing means it's done and I know my place in the world.''  Hayley is very ``concrete goal''-driven, so when someone tells her that there is no goal to strive for, it freaks her out worse than 5 year olds being told there is no Santa.  If there is no end goal to tell her when she's finished something, how can she know how well she did? Chaos and uncertainty terrify her.  And she has to do ``her very best''.  It's very Dollhouse.  The drive to ace anything that seems like a test is VERY strong. \textsubscript{12/12/12 11:02am}}\footnote{$\rightarrow$\textbf{Suko T }Oh and as for the: ``I thought she thought she failed because she didn't follow orders properly (whatever her orders were).''  
+``There is no end to anything.  You should come to terms with that,'' says Dr. Gerhauser.}\footnote{\textbf{q.google }This by far my favorite conversation in the whole game. \textsubscript{12/07/12 10:36am}}\footnote{$\rightarrow$\textbf{Suko T }It really hit Hayley in one of her vulnerable spots. \textsubscript{12/07/12 12:11pm}}\footnote{$\rightarrow$\textbf{q.google }I'm actually surprised to learn Hayley is motivated by the notion of winning.  I thought she thought she failed because she didn't follow orders properly (whatever her orders were). \textsubscript{12/11/12 8:15pm}}\footnote{$\rightarrow$\textbf{Suko T }It's less ``winning for the sake of victory'' than for ``winning/finishing means it's done and I know my place in the world.''  Hayley is very ``concrete goal''-driven, so when someone tells her that there is no goal to strive for, it freaks her out worse than 5 year olds being told there is no Santa.  If there is no end goal to tell her when she's finished something, how can she know how well she did? Chaos and uncertainty terrify her.  And she has to do ``her very best''.  It's very Dollhouse.  The drive to ace anything that seems like a test is VERY strong. \textsubscript{12/12/12 11:02am}}\footnote{$\rightarrow$\textbf{Suko T }Oh and as for the: ``I thought she thought she failed because she didn't follow orders properly (whatever her orders were).''  
 
 It's not that, because you've seen what she does when she thinks she hasn't followed orders (like with Trenton) or if she thinks the orders she was given were unclear/flawed.  It's a very different sort of reaction. \textsubscript{12/13/12 5:28pm}}
 
