--- a/4T/ch13.tex
+++ b/4T/ch13.tex
@@ -302,9 +302,9 @@ Morgan thinks for a moment and replies, ``The Orc of Anglia is motivated by path
 
 {[}...{]}
 
-REBECCAxxBEGINxxHIGHLIGHTxx``To lay a card of my own on the table.''
+\hl{``To lay a card of my own on the table.''
 
-``Nice for someone else to know what it's like.''xxENDxxHIGHLIGHT\footnote{\textbf{Suko T }I have these snippets of dialog but several sentences are missing.  Can anyone fill in the missing lines? \textsubscript{12/30/12 11:37pm}}
+``Nice for someone else to know what it's like.'}\footnote{\textbf{Suko T }I have these snippets of dialog but several sentences are missing.  Can anyone fill in the missing lines? \textsubscript{12/30/12 11:37pm}}
 
 ``There's something else I was hoping you could help with,'' says Oliver.  ``My father's in hot water because of my careless actions in Cardoza.''
 
