--- a/4T/ch19.tex
+++ b/4T/ch19.tex
@@ -340,9 +340,9 @@ Jaya praises her for her job on the rope climbing exercise, but Hayley's mind is
 
 
 
-REBECCAxxBEGINxxHIGHLIGHTxxJaya looks at Oliver.  ``Are we in the Tank?''
+\hl{Jaya looks at Oliver.  ``Are we in the Tank?''
 
-``No.''xxENDxxHIGHLIGHT\footnote{\textbf{q.google }:) :) :) \textsubscript{04/16/13 12:25am}}
+``No.''}\footnote{\textbf{q.google }:) :) :) \textsubscript{04/16/13 12:25am}}
 
 
 
