--- a/4T/ch3.tex
+++ b/4T/ch3.tex
@@ -37,7 +37,7 @@ Jonah is working with his cover identity.  He is being asked by his bandage supp
 
 
 
- {\LARGE Session } 
+\jumpHeadline{Session } 
 
 
 
