Fixing up highlights, deets, and quotes for ch21

--- a/4T/ch21.tex
+++ b/4T/ch21.tex
@@ -4,16 +4,11 @@
 
 
 
-\begin{center}
- {\LARGE \textbf{(Borrough Station, ver 2.0, part 1)} } 
-\end{center}
+\subChapterTitle{(Borrough Station, ver 2.0, part 1)}
 
 
 
-
-\textit{Notes:} Suko
-
-\textit{Date:} February 21st, 2014
+\deets{Suko}{February 21st, 2014}
 
 
 
@@ -381,7 +376,7 @@ Jaya peers around a corner and sees a man in miner's clothing standing by a larg
 
 
 
-``I'm here to make a prisoner exchange,''\footnote{\textbf{Suko T }Or something along these lines \textsubscript{02/25/14 4:48pm}} says the man to Jaya.
+\hl{``I'm here to make a prisoner exchange,''}\footnote{\textbf{Suko T }Or something along these lines \textsubscript{02/25/14 4:48pm}} says the man to Jaya.
 
 ``Exchange for who?'' asks Jaya.
 
@@ -413,7 +408,7 @@ Diego and Leah burst onto the floor, startling everyone but the ``prisoner''.  D
 
 
 
-Jonah looking at the prisoner and he smirks back at him.  The smirk just gets deeper and deeper until it's clear that his face is distorting abnormally.  The man appears to be \footnote{\textbf{Nathaniel Ford }Less melting, and more like a stroke: muscles seizing in an abnormal and asymmetric pattern. \textsubscript{02/25/14 8:13pm}}\footnote{$\rightarrow$\textbf{Suko T }Right- amended. :) \textsubscript{02/25/14 9:46pm}}having a stroke.  Hayley backs away in horror.
+Jonah looking at the prisoner and he smirks back at him.  The smirk just gets deeper and deeper until it's clear that his face is distorting abnormally.  \hl{The man appears to be }\footnote{\textbf{Nathaniel Ford }Less melting, and more like a stroke: muscles seizing in an abnormal and asymmetric pattern. \textsubscript{02/25/14 8:13pm}}\footnote{$\rightarrow$\textbf{Suko T }Right- amended. :) \textsubscript{02/25/14 9:46pm}}having a stroke.  Hayley backs away in horror.
 
 
 
@@ -462,27 +457,14 @@ Oliver: 2
 
 ``No offense, but they don't send in Agents to 'not too bad' situations.''
 
-        - Nate
+\extraIndent {       - Nate}
 
 
 
 ``Look for anything unusual!  Like an assassin, or an explosion, or a tripwire.'' 
 
-        -Rebecca
+\extraIndent{        -Rebecca}
 
-
-\iffalse
-
-======================
-THESE ARE ERRORS ENCOUNTERED DURING THE EXPORT PROCESS
-======================
-
-	Unable to highlight for footnote: Or something along these lines because:GivenExpected“I’m here to make a prisoner exchange,”“I thought you would be interested in an exchange,”
-
-	Unable to highlight for footnote: Less melting, and more like a stroke: muscles seizing in an abnormal and asymmetric pattern., unable to correctly match (exceeded acceptable limit):ExpectedThe man appears to be melting
-
-
-\fi
 
 \vspace{\fill}
 
