Cleaning up highlight and quote stuff for ch22

--- a/4T/ch22.tex
+++ b/4T/ch22.tex
@@ -2,18 +2,9 @@
 \chapter{\textbf{``Constituents''} }
 
 
+\subChapterTitle{(Borrough Station, ver 2.0, part 2)} 
 
-
-\begin{center}
- {\LARGE \textbf{(Borrough Station, ver 2.0, part 2)} } 
-\end{center}
-
-
-
-
-\textit{Notes:} Suko
-
-\textit{Date:} March 13th, 2014
+\deets{Suko}{March 13th, 2014}
 
 
 
@@ -394,7 +385,7 @@ Lackovich and Jaya are trying to climb up the ladder and Lackovich is getting in
 
 
 
-``I know exactly what I need to know about you,'' Oliver says to the figure.  He tries to fire his gun but it misfires from the damage earlier.   The Orc moves defensively out of the way and then realizes the gun is not functioning.  The Orc grabs Oliver's collar and leans in close\footnote{\textbf{Nathaniel Ford }The Orc grabbed his BDU collar and pulled him close before saying, ``Are you sure?'' Then Oliver was slammed into the wall before the Orc took off. \textsubscript{03/19/14 11:34am}}\footnote{$\rightarrow$\textbf{Suko T }Cool, thanks!  Fixed. \textsubscript{03/19/14 11:01pm}}.  ``Are you sure?'' says the Orc.  \hl{A strand of dark hair with reddish highlights brushes Oliver's face}\footnote{\textbf{q.google }Cue dramatic music!  The boards are talking about this for days afterwards. \textsubscript{05/01/14 12:48pm}}\footnote{$\rightarrow$\textbf{Nathaniel Ford }Google really needs to implement a +1 on comments. Seriously. They integrated G+ everywhere else. \textsubscript{05/01/14 3:24pm}} as the Orc slams him against the wall.  {[}\textit{Challenge: Stay in the fight 3.  Battle dress uniform 2 (Oliver) + Arm Strength 1 (Oliver) + }\textit{ {\color[RGB]{255,0,0}Flaw: Stunned 1 (Oliver)} }\textit{ → Matched}{]}  The Orc leaves.
+``I know exactly what I need to know about you,'' Oliver says to the figure.  He tries to fire his gun but it misfires from the damage earlier.   The Orc moves defensively out of the way and then realizes the gun is not functioning.  \hl{The Orc grabs Oliver's collar and leans in close}\footnote{\textbf{Nathaniel Ford }The Orc grabbed his BDU collar and pulled him close before saying, ``Are you sure?'' Then Oliver was slammed into the wall before the Orc took off. \textsubscript{03/19/14 11:34am}}\footnote{$\rightarrow$\textbf{Suko T }Cool, thanks!  Fixed. \textsubscript{03/19/14 11:01pm}}.  ``Are you sure?'' says the Orc.  \hl{A strand of dark hair with reddish highlights brushes Oliver's face}\footnote{\textbf{q.google }Cue dramatic music!  The boards are talking about this for days afterwards. \textsubscript{05/01/14 12:48pm}}\footnote{$\rightarrow$\textbf{Nathaniel Ford }Google really needs to implement a +1 on comments. Seriously. They integrated G+ everywhere else. \textsubscript{05/01/14 3:24pm}} as the Orc slams him against the wall.  {[}\textit{Challenge: Stay in the fight 3.  Battle dress uniform 2 (Oliver) + Arm Strength 1 (Oliver) + }\textit{ {\color[RGB]{255,0,0}Flaw: Stunned 1 (Oliver)} }\textit{ → Matched}{]}  The Orc leaves.
 
 
 
@@ -465,16 +456,18 @@ Hayley: 1
 
 \jumpHeadline{Quotes }
 
+\quotedDialog{
 ``You have one job, which you are totally unqualified for...'' - Nate
 
 ``Welcome to the TA.'' - Adam
+}
 
 
+``Doesn't anyone have, I don't know, 'eyesight'?'' 
+\extraIndent{- Jaya}
 
-``Doesn't anyone have, I don't know, 'eyesight'?'' - Jaya
 
-
-
+\quotedDialog{
 ``I guess becoming an Agent is more of a lottery thing.'' - Diego (Nate)
 
 ``Let me put it this way, it may start out as a lottery but the training is not.'' - Jonah
@@ -486,42 +479,33 @@ Hayley: 1
 ``Well you sorta seem to know what you're doing.'' - Diego
 
 ``That's the training.'' - Jonah
+}
+
+
+``I use psychology to access his inner death wish.'' 
+\extraIndent{- Rebecca}
 
 
 
-``I use psychology to access his inner death wish.'' - Rebecca
+``I would love to help you, but all I can do is shoot a gun.'' 
+\extraIndent{- Jaya}
 
 
-
-``I would love to help you, but all I can do is shoot a gun.'' - Jaya
-
-
-
+\quotedDialog{
 ``Is {[}Lackovich{]} blocking me?'' -Rebecca 
 
-``It's kind of her narrative role.'' -Nate
+``It's kind of her narrative role.'' -Nate\\[4mm] % need 4mm break to prevent quote blocks from running together!
+}
 
-
-
+\quotedDialog{
 ``Are these all your constituents?  Are you with all of them?'' - Hayley
 
 ``Are you stupid?'' - Agent \#2
 
 ``Yes.  That is why I am asking.'' - Hayley
+}
 
 
-
-
-\iffalse
-
-======================
-THESE ARE ERRORS ENCOUNTERED DURING THE EXPORT PROCESS
-======================
-
-	Unable to highlight for footnote: The Orc grabbed his BDU collar and pulled him close before saying, "Are you sure?" Then Oliver was slammed into the wall before the Orc took off. because:GivenExpectedThe Orc grabs Oliver’s collar and leans in closeThe Orc leans in close to Oliver
-
-
-\fi
 
 \vspace{\fill}
 
