Much modification of the ch25 formatting. More still needed

--- a/4T/ch25.tex
+++ b/4T/ch25.tex
@@ -22,10 +22,10 @@ A lot of intro text to scenes was scripted, perhaps Nate would be kind enough to
 My Adam has an honorary good quote for the night with, ``Wait, so \underline{  {\color[RGB]{17,85,204}they killed Kenney}  }\hl{?}\footnote{\textbf{Suko T }Ha! :) \textsubscript{05/28/14 12:20am}}\footnote{$\rightarrow$\textbf{Nathaniel Ford }OMG LULZ. :D \textsubscript{05/28/14 12:04pm}}``  
 
 
+\ding{110}\ding{110}\ding{110}\ding{110}\ding{110}\ding{110}\ding{110}\ding{110}\ding{110}\ding{110}\ding{110}\ding{110}\ding{110}
 
 
-
-
+\jumpHeadline{At the start}
 
 We're in the Ops room, Dr. Gerhauser, Morgan, Rook, Swan and Larissa are there.  Carruthers is at the door, standing guard.  We're in the tanks, carts with our shit on are right next to our tanks, ready to grab
 
@@ -61,7 +61,7 @@ We go under and everyone mentally ``sees'' themselves in a train car, blurred im
 
 
 
-
+\jumpHeadline{ Scene 1 : The Burning}
 
 Oliver is in a wheelchair.  When she speaks he fails to recognize Octavia's voice...  Pushing down a corridor.  They enter a room with high ceilings.  Through the window is a view of sea and the red setting sun, a sight that Oliver has not seen before.
 
@@ -70,6 +70,8 @@ Oliver is in a wheelchair.  When she speaks he fails to recognize Octavia's voic
 Kneeling in front of a brazier is a tall beautiful man.  ``\hl{Astarte}\footnote{\textbf{Adam Kenney }So out of curiosity, do we think this is the name of Sister \#3? \textsubscript{06/08/14 11:58am}}\footnote{$\rightarrow$\textbf{Nathaniel Ford }The other PCs were privy to certain information, including her name, before you were. Which is why they freaked when you called your sister Ester. I think Suko gave you access to the session notes - let me know if not! \textsubscript{06/08/14 12:15pm}} taught us a great deal about memory, about it's beauty and it's terror. I have brought you here to witness an act of memory, an act of willpower.''  The man pours hot oil shit on his face and it fucking melts.  Creepy. Still alive but really really gross.  Familiar raspy voice asks Oliver, ``Are you sure?''
 
  {\LARGE \textit{ {\color[RGB]{102,102,102}this was mostly scripted} } } 
+
+\jumpHeadline{Scene 2 : The Forum}
 
 Octavia pushes him to another room.  Romanesque, see outside to the night.  Tall beautiful other peoples (30 of them). are seated in the forum area.  At the top colonnade area, 6 people are watching (they look different, more diverse racially, with varying skintones.  One even has a greenish tint to their face.  They are shorter and broader but still very good looking with symmetrical features.)
 
@@ -90,10 +92,12 @@ Oliver stands up and realizes his leg is whole again. ``What are you going to do
 ``Best not to tell you, just show you,'' Octavia says
 
 
+\jumpHeadline{Scene 3: Falling}
 
 The ground opens up under him and he falls.  He presses the button on the rod but nothing happens.  He falls down a shaft.  There's a white light at the bottom... big bubble forms around him as he falls.  There is darkness and a wrenching \hl{nausea}\footnote{\textbf{Nathaniel Ford }This is exactly like, but about an order of magnitude worse, than the nausea sometimes experienced in the subway tunnels. \textsubscript{06/01/14 11:23am}}.
 
 
+\jumpHeadline{Memory : DX Platform}
 
 Oliver \& Jonah -- the doors of the train open up and shit gets real.  
 
@@ -151,17 +155,17 @@ The little girl turns to Oliver and says ``Of course we talk to you''.  Jonah is
 
 
 
- {\color[RGB]{68,68,68}▶▶ }  (Jonah) Apparently they are going to analyze him
+\ding{228}\ding{228} {\color[RGB]{68,68,68}▶▶ }  (Jonah) Apparently they are going to analyze him
 
- {\color[RGB]{68,68,68}▶ } (people in Ops, usually Rook) You need to make him try harder.  
+\ding{228} {\color[RGB]{68,68,68}▶ } (people in Ops, usually Rook) You need to make him try harder.  
 
- {\color[RGB]{68,68,68}▶▶ } What do I need to try?
+\ding{228}\ding{228} {\color[RGB]{68,68,68}▶▶ } What do I need to try?
 
- {\color[RGB]{68,68,68}▶ } We're not really sure. Make him open up. 
+\ding{228} {\color[RGB]{68,68,68}▶ } We're not really sure. Make him open up. 
 
 
 
- {\LARGE \textbf{ {\color[RGB]{51,51,51}██████} } }  {\LARGE \textbf{ Memory : Guns Out} } 
+\jumpHeadline{ Memory : Guns Out} 
 
 
 
@@ -209,8 +213,7 @@ REBECCAxxBEGINxxHIGHLIGHTxx``Lets talk more about disassembly,'' he walks throug
 
 \textgreater \textgreater \textgreater \textgreater   OOG Kenney is handed 2 green cards, chooses one and spends a token
 
-▷▷ (what Hayley sees) visceral flash of a man going down to one knee, wincing in pain with blood coming out of his nose
-
+\ding{227} \ding{227}  (what Hayley sees) visceral flash of a man going down to one knee, wincing in pain with blood coming out of his nose
 
 
 Little girl turns around with a pipe and advances on Hayley.  Hayley attempts to step in front of Oliver.  \hl{The train doors close}\footnote{\textbf{Nathaniel Ford }Visually, this is the camera moving in on the character's face, until the background is unclear, tunnel-wind blowing their hair, and then doors shutting in front of them, even though the train never really 'arrives'. \textsubscript{05/07/15 5:33pm}}
@@ -221,7 +224,7 @@ Little girl turns around with a pipe and advances on Hayley.  Hayley attempts to
 
 
 
- {\LARGE \textbf{ {\color[RGB]{51,51,51}██████} } }  {\LARGE \textbf{ Memory : The Handshake} } 
+\jumpHeadline{ Memory : The Handshake} 
 
 
 
@@ -257,9 +260,9 @@ Jonah relays Rook's caution, ``He's analyzing too much.''
 
 
 
-▷▷``Legionnaires, start bringing me hearts`` -- the thought flashes through Hayley and Oliver's minds.  Flashes of visions as well... People standing on the train platform, tall dudes from before, with big knives they start fucking up the weakling peoples (in Franchise clothing)... Mostly gutted and stabbed ... not dying outright, long painful bleeding out process.  
+\ding{227}\ding{227}\hl{``Legionnaires, start bringing me hearts`` -- the thought flashes through Hayley and Oliver's minds.  Flashes of visions as well... People standing on the train platform, tall dudes from before, with big knives they start fucking up the weakling peoples (in Franchise clothing)... Mostly gutted and stabbed ... not dying outright, long painful bleeding out process.  
 
-Hayley has an emotional reaction to the scene.  First indignation- ``You don't remove hearts like that!'' and then sadness at the waste.\footnote{\textbf{Nathaniel Ford }Hayley may, with her nose for breadcrumbs, eventually pick up that they were very deliberate in how they mortally wounded the victims. Each blow was as efficient as possible while ensuring death and maximizing time until death. Most people bled out, conscious. The fighters were hamstrung or otherwise disabled before being mortally wounded. \textsubscript{06/01/14 11:31am}}
+Hayley has an emotional reaction to the scene.  First indignation- ``You don't remove hearts like that!'' and then sadness at the waste.}\footnote{\textbf{Nathaniel Ford }Hayley may, with her nose for breadcrumbs, eventually pick up that they were very deliberate in how they mortally wounded the victims. Each blow was as efficient as possible while ensuring death and maximizing time until death. Most people bled out, conscious. The fighters were hamstrung or otherwise disabled before being mortally wounded. \textsubscript{06/01/14 11:31am}}
 
 Oliver feels sharp rage.
 
@@ -267,11 +270,11 @@ Hayley wonders if that's what happened to the bodies at Nicklepan?
 
 
 
- {\color[RGB]{68,68,68}▶▶ } Was that getting emotional?
+\ding{228}\ding{228} {\color[RGB]{68,68,68}▶▶ } Was that getting emotional?
 
- {\color[RGB]{68,68,68}▶} That was better.  I need to talk to Trenton.... Trenton and Victor agree, we need him more emotional but more analytical of the emotions... wait... one moment.   ..... (stuttered start) .... we need more readings. 
+\ding{228} {\color[RGB]{68,68,68}▶} That was better.  I need to talk to Trenton.... Trenton and Victor agree, we need him more emotional but more analytical of the emotions... wait... one moment.   ..... (stuttered start) .... we need more readings. 
 
- {\color[RGB]{68,68,68}▶▶ } Figure out what you want and get back to me
+\ding{228}\ding{228} {\color[RGB]{68,68,68}▶▶ } Figure out what you want and get back to me
 
 
 
@@ -279,7 +282,7 @@ Hayley wonders if that's what happened to the bodies at Nicklepan?
 
 
 
- {\LARGE \textbf{ {\color[RGB]{51,51,51}██████} } }  {\LARGE \textbf{ Memory : Dinner} } 
+\jumpHeadline{Memory : Dinner} 
 
 Oliver is at dinner with Mother, Father, Roger, plus SCARY SMALL GIRL.  She puts things in her mouth.  Food, napkins, silverware. They all disappear without her chewing.
 
@@ -323,17 +326,17 @@ Oliver looks at Roger, ``Who are you, and why are you in my father's house?''
 
 
 
- {\color[RGB]{68,68,68}▶ } We got a lock!  You guys are doing really well
+\ding{228} {\color[RGB]{68,68,68}▶ } We got a lock!  You guys are doing really well
 
 
 
-▷▷Hayley feels a sense of frustration coming from outside of herself.  Many orders are being given, though she can't really understand what they are saying.   Then she is seeing a room through Octavia's eyes.  There are 2 Legionnaires holding holding Gillian down on her knees, there's a man (Lord Stanislav) objecting loudly.  When Octavia enters he comes at her, yet she ignores him.  When he gets close enough she stabs him in the eye with a dagger.   Hayley is freaking out and the boys get a sense of this.  
+\ding{227}\ding{227}Hayley feels a sense of frustration coming from outside of herself.  Many orders are being given, though she can't really understand what they are saying.   Then she is seeing a room through Octavia's eyes.  There are 2 Legionnaires holding holding Gillian down on her knees, there's a man (Lord Stanislav) objecting loudly.  When Octavia enters he comes at her, yet she ignores him.  When he gets close enough she stabs him in the eye with a dagger.   Hayley is freaking out and the boys get a sense of this.  
 
 Octavia takes the knife and cuts Gillian's clothes off.  (( Hayley sends the feeling of OUTRAGE )) ``Now, how did this go?''  Octavia muses outside, and starts cutting into Gillian's flesh.  Hayley knows exactly what patterns Octavia is carving and feels the marks on her own skin.
 
 
 
- {\LARGE \textbf{ {\color[RGB]{51,51,51}██████} } }  {\LARGE \textbf{ Memory: Arresting Victor} } 
+\jumpHeadline{ Memory: Arresting Victor} 
 
 Now we're all in the ``Arresting Victor'' scene!!
 
@@ -347,7 +350,7 @@ Hayley's in hysterics, saying that she has to go help Ms. Vorrutyer.  She's hurt
 
 
 
- {\color[RGB]{68,68,68}▶ } Your readings are WAY off, you're losing him.  What is going on?
+\ding{228} {\color[RGB]{68,68,68}▶ } Your readings are WAY off, you're losing him.  What is going on?
 
 
 
@@ -379,29 +382,29 @@ Oliver laughs.
 
 
 
- {\color[RGB]{68,68,68}▶}  The analogy Trenton is using is... These aren't his words... It's like his sphincter was clenched and he let go.  I apologize he couldn't come up with a less colorful analogy.  
+\ding{228} {\color[RGB]{68,68,68}▶}  The analogy Trenton is using is... These aren't his words... It's like his sphincter was clenched and he let go.  I apologize he couldn't come up with a less colorful analogy.  
 
- {\color[RGB]{68,68,68}▶▶ } He's not dying, is he?
+\ding{228}\ding{228} {\color[RGB]{68,68,68}▶▶ } He's not dying, is he?
 
- {\color[RGB]{68,68,68}▶ } We have no way to monitor his lifesigns. 
-
-
-
-▷▷ Hayley gets the sense there is some frustration.  There is a debate that goes over very very fast if they should kill Gillian.  Then they decide to just torture her... and then they'll reconstitute Signe. 
+\ding{228} {\color[RGB]{68,68,68}▶ } We have no way to monitor his lifesigns. 
 
 
 
- {\color[RGB]{68,68,68}▶▶▶  } Jonah, what does reconstitute mean'' wonders Hayley.  ``Isn't that for soup?''
-
- {\color[RGB]{68,68,68}▶▶ } Jonah replies, ``What is the context?''
-
- {\color[RGB]{68,68,68}▶▶▶ } At hearing his voice in her head, Hayley just says a delighted, ``Hi!'' and fails to answer his question.
+\ding{227}\ding{227} Hayley gets the sense there is some frustration.  There is a debate that goes over very very fast if they should kill Gillian.  Then they decide to just torture her... and then they'll reconstitute Signe. 
 
 
 
+\ding{228}\ding{228}\ding{228} {\color[RGB]{68,68,68}▶▶▶  } Jonah, what does reconstitute mean'' wonders Hayley.  ``Isn't that for soup?''
+
+\ding{228}\ding{228} {\color[RGB]{68,68,68}▶▶ } Jonah replies, ``What is the context?''
+
+\ding{228}\ding{228}\ding{228} {\color[RGB]{68,68,68}▶▶▶ } At hearing his voice in her head, Hayley just says a delighted, ``Hi!'' and fails to answer his question.
 
 
- {\LARGE \textbf{ {\color[RGB]{51,51,51}██████} } }  {\LARGE \textbf{ Memory : First Aid} } 
+
+
+
+\jumpHeadline{ Memory : First Aid} 
 
 Jonah is in the scene.  Jonah has been shot, he's in a hallway.  Oliver is first-aiding him. Jonah is compelled to say ``Oh Fuck'' on all levels.  Jonah is on the ground... there's a small girl wandering the hallways, where she trails her fingers along the hallway, the wallpaper peels back. 
 
@@ -445,7 +448,7 @@ Oliver bitterly laughs.
 
 Oliver finds that he was applying first aid to the little girl.
 
-▷▷ \hl{There is a disturbance in the Force}\footnote{\textbf{Nathaniel Ford }I probably should have elaborated at the time, but if you think of the connection between the four of you being a boat, it's like someone really heavy jumped into the boat and then jumped out.
+\ding{227}\ding{227} \hl{There is a disturbance in the Force}\footnote{\textbf{Nathaniel Ford }I probably should have elaborated at the time, but if you think of the connection between the four of you being a boat, it's like someone really heavy jumped into the boat and then jumped out.
 
 Or, more precisely, if you're an upside down four-sided die, with Oliver as the downward point upon which the die is being spun, the die is suddenly spun the other direction, and the reversed again. \textsubscript{06/01/14 11:34am}}.
 
@@ -453,17 +456,17 @@ Or, more precisely, if you're an upside down four-sided die, with Oliver as the 
 
 
 
- {\color[RGB]{68,68,68}▶}  We may have a problem... it seems as though to quote Victor they are ``Riding his wavelength.''
+\ding{228} {\color[RGB]{68,68,68}▶}  We may have a problem... it seems as though to quote Victor they are ``Riding his wavelength.''
 
- {\color[RGB]{68,68,68}▶▶} They're following him?
+\ding{228}\ding{228} {\color[RGB]{68,68,68}▶▶} They're following him?
 
- {\color[RGB]{68,68,68}▶} No, they're piggybacking him.  We can disambiguate... ??? The word he used is they ``Juked Us''
+\ding{228} {\color[RGB]{68,68,68}▶} No, they're piggybacking him.  We can disambiguate... ??? The word he used is they ``Juked Us''
 
- {\color[RGB]{68,68,68}▶}  if you see the girl, take her down at all costs. 
+\ding{228} {\color[RGB]{68,68,68}▶}  if you see the girl, take her down at all costs. 
 
 
 
- {\LARGE \textbf{ {\color[RGB]{51,51,51}██████} } }  {\LARGE \textbf{ Memory : Scars} } 
+\jumpHeadline{Memory : Scars} 
 
 Hayley and Oliver are hanging out at the cistern.  Hayley undresses.  Oliver, for the record, looks away as she undresses.  There's something moving under the water, the water is draining from the cistern.
 
@@ -516,7 +519,7 @@ Hayley calms down a bit, ``Yes, thank you.  Is that swimming?  I don't like it.'
 
 
 
- {\color[RGB]{68,68,68}▶▶}  Hayley, wherever you are, keep your eye out for the girl.  PROJECTS JONAH
+\ding{228}\ding{228} {\color[RGB]{68,68,68}▶▶}  Hayley, wherever you are, keep your eye out for the girl.  PROJECTS JONAH
 
 
 
@@ -536,23 +539,23 @@ THE DOORS SHUT
 
 
 
- {\color[RGB]{68,68,68}▶}  This is going very well, we just got a second lock
+\ding{228} {\color[RGB]{68,68,68}▶}  This is going very well, we just got a second lock
 
- {\color[RGB]{68,68,68}▶▶}  That's good, this is kind of hard to watch
+\ding{228}\ding{228} {\color[RGB]{68,68,68}▶▶}  That's good, this is kind of hard to watch
 
- {\color[RGB]{68,68,68}▶▶▶ (Hayley) } \hl{I didn't see the girl, perhaps because I killed her last time}\footnote{\textbf{Nathaniel Ford }For posterity: the girl was in the scene. \textsubscript{09/22/14 10:40pm}}\footnote{$\rightarrow$\textbf{Suko T }At the time, I assumed she was underwater consuming the water in the Cistern.  When Hayley blinked and looked around, that was her realizing that the little girl may be in the water with them. \textsubscript{09/23/14 4:08pm}}
+\ding{228}\ding{228}\ding{228} {\color[RGB]{68,68,68}▶▶▶ (Hayley) } \hl{I didn't see the girl, perhaps because I killed her last time}\footnote{\textbf{Nathaniel Ford }For posterity: the girl was in the scene. \textsubscript{09/22/14 10:40pm}}\footnote{$\rightarrow$\textbf{Suko T }At the time, I assumed she was underwater consuming the water in the Cistern.  When Hayley blinked and looked around, that was her realizing that the little girl may be in the water with them. \textsubscript{09/23/14 4:08pm}}
 
- {\color[RGB]{68,68,68}▶▶}  She'll be back
+\ding{228}\ding{228} {\color[RGB]{68,68,68}▶▶}  She'll be back
 
- {\color[RGB]{68,68,68}▶▶▶}  They seem to be getting very frustrated, I can feel it. And they haven't said anything recently...
+\ding{228}\ding{228}\ding{228} {\color[RGB]{68,68,68}▶▶▶}  They seem to be getting very frustrated, I can feel it. And they haven't said anything recently...
 
- {\color[RGB]{68,68,68}▶▶} What have they said?
+\ding{228}\ding{228} {\color[RGB]{68,68,68}▶▶} What have they said?
 
- {\color[RGB]{68,68,68}▶▶▶} They've been arguing about whether or not to kill Ms Vorrutyer but they decided not. They're just going to torture her.... Then they wanted to get hearts... Told the Legionnaires to get lots of hearts, but they did it very poorly.
+\ding{228}\ding{228}\ding{228} {\color[RGB]{68,68,68}▶▶▶} They've been arguing about whether or not to kill Ms Vorrutyer but they decided not. They're just going to torture her.... Then they wanted to get hearts... Told the Legionnaires to get lots of hearts, but they did it very poorly.
 
- {\color[RGB]{68,68,68}▶▶} Tell me next time they say anything
+\ding{228}\ding{228} {\color[RGB]{68,68,68}▶▶} Tell me next time they say anything
 
- {\color[RGB]{68,68,68}▶▶▶} Jaya says it's not true, but I think I'm seeing through Octavia's eyes. 
+\ding{228}\ding{228}\ding{228} {\color[RGB]{68,68,68}▶▶▶} Jaya says it's not true, but I think I'm seeing through Octavia's eyes. 
 
 so many wooooooords
 
@@ -560,7 +563,7 @@ so many wooooooords
 
 
 
- {\LARGE \textbf{ {\color[RGB]{51,51,51}██████} } }  {\LARGE \textbf{ Scene : Grenade!!} } 
+\jumpHeadline{ Scene : Grenade!!} 
 
 Jaya and Oliver and are in horrendous slow-mo to forever, talking.   The lights in the corridor are slowly being extinguished.
 
@@ -598,21 +601,21 @@ Eventually he lands on the grenade, and at the last moment his mouth ticks up wi
 
 
 
-▷▷ In Hayley's brain:  The face of a man, intensely concentrating.  Blood is running down the side of his head and dripping on the ground.  There's anger and thinking and decision making.  Graves would be a suitable target since it does not have any important resources.  The order is given: INITIATE GLASS ROAD. (Graves is a subway stop in the directorate) 
+\ding{227}\ding{227} In Hayley's brain:  The face of a man, intensely concentrating.  Blood is running down the side of his head and dripping on the ground.  There's anger and thinking and decision making.  Graves would be a suitable target since it does not have any important resources.  The order is given: INITIATE GLASS ROAD. (Graves is a subway stop in the directorate) 
 
 
 
- {\color[RGB]{68,68,68}▶▶▶ } Hayley reports this to Jonah.  The folks in Ops ask for a confirmation that they said ``Glass Road''. 
+ \ding{228}\ding{228}\ding{228}{\color[RGB]{68,68,68}▶▶▶ } Hayley reports this to Jonah.  The folks in Ops ask for a confirmation that they said ``Glass Road''. 
 
- {\color[RGB]{68,68,68}▶▶ } Jonah reports that Oliver appears to be forgetting things.
+\ding{228}\ding{228} {\color[RGB]{68,68,68}▶▶ } Jonah reports that Oliver appears to be forgetting things.
 
- {\color[RGB]{68,68,68}▶ } Rook says that the memories he's dwelling on are important to him.  We have to find the locus of that memory.
-
-
+\ding{228} {\color[RGB]{68,68,68}▶ } Rook says that the memories he's dwelling on are important to him.  We have to find the locus of that memory.
 
 
 
- {\LARGE \textbf{ {\color[RGB]{51,51,51}██████} } }  {\LARGE \textbf{ Memory : Kate in the rain} } 
+
+
+\jumpHeadline{ Memory : Kate in the rain} 
 
 
 
@@ -666,7 +669,7 @@ HE/SHE SAYS ALL THE RIGHT THINGS
 
 
 
- {\LARGE \textbf{ {\color[RGB]{51,51,51}██████} } }  {\LARGE \textbf{ Memory : Babe in Arms} } 
+\jumpHeadline{ Memory : Babe in Arms} 
 
 
 
@@ -716,7 +719,7 @@ Jaya snaps at the girl to leave and then makes the poor choice of trying to kick
 
 
 
- {\LARGE \textbf{ {\color[RGB]{51,51,51}██████} } }  {\LARGE \textbf{ Memory : Baseline} } 
+\jumpHeadline{ Memory : Baseline} 
 
 
 
@@ -816,7 +819,7 @@ Aaaaand creepy girl uses the scalpel to cut ``Kate'''s throat
 
 
 
- {\LARGE \textbf{ {\color[RGB]{51,51,51}██████} } }  {\LARGE \textbf{ Memory : A Study of Langdon} } 
+\jumpHeadline{ Memory : A Study of Langdon} 
 
 Oliver is in a scene with his father, who is cleaning a gun. 
 
@@ -866,7 +869,7 @@ Girl blows off Father's head
 
 
 
- {\LARGE \textbf{ {\color[RGB]{51,51,51}██████} } }  {\LARGE \textbf{ Memory : The Orc of Anglia} } 
+\jumpHeadline{ Memory : The Orc of Anglia} 
 
 ``What do you want?'' asks the Orc.
 
@@ -914,7 +917,7 @@ Oliver runs after the Orc.
 
 
 
- {\LARGE \textbf{ {\color[RGB]{51,51,51}██████} } }  {\LARGE \textbf{ Memory : Jaya in the Rain} } 
+\jumpHeadline{ Memory : Jaya in the Rain} 
 
 
 
@@ -974,7 +977,7 @@ The little girl puts a hand on Oliver.  ``Any last words?'' she asks.
 
 
 
- {\LARGE \textbf{ {\color[RGB]{51,51,51}██████} } }  {\LARGE \textbf{ Memory : The House} } 
+\jumpHeadline{ Memory : The House} 
 
 Oliver is sitting on a balcony waiting for Hekate Gerhauser, with a bottle of wine and his back to the wall, scoping out sniper positions. Kate is there, seamlessly, sitting across from him. They have just had a long conversation. There is a book on the table. She seems to have forgotten about it. Oliver has an unlit cigarette in his hand. There is a palpable energy in the air, but everything seems very still.  The water beyond the balcony is dark, with the sense of something beneath it. It is slowly rising as it gently laps against ancient stone.
 
@@ -1012,7 +1015,7 @@ And just before it goes to black, Kate says quietly, ``I love you''
 
 
 
- {\LARGE \textbf{ {\color[RGB]{51,51,51}██████} } }  {\LARGE \textbf{ Memory :} } \underline{  {\LARGE \textbf{ {\color[RGB]{17,85,204} The Battle of DX Station} } }  }
+\jumpHeadline{ Memory : The Battle of DX Station} \footnote{\textbf{Rebecca (as editor) }This was a link to Deus Ex-Human Revolution: Icarus Main Theme on Rdio}
 
 shit gets real
 
@@ -1096,30 +1099,32 @@ Many years later, the cylinder with the blinking light's battery runs out.
 
 
 
+\jumpHeadline{Quotes}
+
+Hayley: This isn't me from then, this is me from now?\\[4mm]
 
 
-Hayley: This isn't me from then, this is me from now?
+\quotedDialog{
+\hl{Nate: Note the tiara.
 
+Adam: You know that 10x10 is 100 right?
 
+Nate: But 9x9 is }\textit{not}.\footnote{\textbf{Nathaniel Ford }This is hilarious misquoted! Not deleting it because of Reasons. \textsubscript{05/28/14 12:13pm}}\footnote{$\rightarrow$\textbf{Suko T }Where Reasons = Tiara \textsubscript{05/28/14 1:27pm}}\\[4mm]
+}
 
-Nate: Note the tiara.Adam: You know that 10x10 is 100 right?
-
-Nate: But 9x9 is \textit{not}.\footnote{\textbf{Nathaniel Ford }This is hilarious misquoted! Not deleting it because of Reasons. \textsubscript{05/28/14 12:13pm}}\footnote{$\rightarrow$\textbf{Suko T }Where Reasons = Tiara \textsubscript{05/28/14 1:27pm}}
-
-
-
+\quotedDialog{
 Nate: Note the T.R. It's multiplicative not additive.
 
 Adam: You know that 10x10 is 100, right?
 
-Nate: But point nine by point nine is \textit{not}.
+Nate: But point nine by point nine is \textit{not}.\\[4mm]
+}
 
-
-
+\quotedDialog{
 Rebecca: I do the thing that my people tell me to do
 
-?: As Jaya always does
-
+?: As Jaya always does\\[4mm]
+}
 
 
 
@@ -1186,9 +1191,9 @@ Rebecca: I do the thing that my people tell me to do
 
 
 
- ``Citizen, First''
+ \hl{``Citizen, First''
 
- Proud: You are better than most, and are frustrated when they don't see it.\footnote{\textbf{Rebecca S. }Damnit, I should have intercepted this one... \textsubscript{05/28/14 11:07pm}}
+ Proud: You are better than most, and are frustrated when they don't see it.}\footnote{\textbf{Rebecca S. }Damnit, I should have intercepted this one... \textsubscript{05/28/14 11:07pm}}
 
 
 
