--- a/4T/book1.ltx
+++ b/4T/book1.ltx
@@ -2,6 +2,7 @@
 \documentclass[10pt]{book}
 \usepackage{color}
 \usepackage{graphicx}
+\usepackage{pifont}
 \usepackage{soul}
 \usepackage{titlesec}
 \usepackage[normalem]{ulem}
